# cockroachdb-cockroach

./: AUTHORS  DEPS.bzl  TEAMS.yaml  go.mod  go.sum
.github/: CODEOWNERS
.github/prompts/: investigate-smoke.md  investigate.md
.github/workflows/: investigate.yml  issue-autosolve.yml  pr-autosolve-ci.yml  pr-autosolve-comments-trigger.yml  pr-autosolve-comments.yml
pkg/: BUILD.bazel
pkg/backup/: BUILD.bazel  backup_job.go  backup_test.go  compaction_test.go  restore_job.go  restore_online_test.go  restore_planning.go  restore_planning_test.go  restore_revision_log.go  restore_revision_log_test.go  revlog_restore_init.go
pkg/backup/backupinfo/: BUILD.bazel
pkg/blobs/: client.go  client_test.go  stream.go
pkg/ccl/: BUILD.bazel  ccl_init.go
pkg/ccl/changefeedccl/: changefeed_processors.go  changefeed_stmt.go  changefeed_test.go
pkg/cli/: BUILD.bazel  cli.go  zip_table_registry.go
pkg/cli/clisqlshell/: describe.go  sql_internal_test.go
pkg/cmd/dev/: acceptance.go
pkg/cmd/docgen/: diagrams.go
pkg/cmd/roachtest/: github.go  github_test.go  main.go  test_test.go
pkg/crosscluster/logical/: BUILD.bazel  create_logical_replication_stmt.go  logical_replication_job_test.go  resume_row.go  resume_txn.go
pkg/geo/geomfn/: distance.go
pkg/internal/metricscan/: metric_owners.yaml
pkg/jobs/: progress_test.go
pkg/kv/kvserver/: BUILD.bazel  app_batch.go  mma_store_rebalancer.go  replica_app_batch.go  replica_application_state_machine.go  replica_lifecycle_datadriven_test.go  replica_raft.go  replica_read.go  replica_write.go  store_send.go  store_split.go
pkg/obs/ash/: sampler.go
pkg/raft/testdata/: campaign.txt  lagging_commit.txt
pkg/revlog/: reader.go
pkg/revlog/restorerevlog/: BUILD.bazel  local_merge_processor.go  restore.go  restore_test.go
pkg/revlog/revlogjob/: BUILD.bazel  flow.go
pkg/roachprod/: roachprod.go
pkg/server/: BUILD.bazel  api_v2_sql_test.go  combined_statement_stats.go  node.go  server.go  server_sql.go  sql_stats.go  statement_details.go  tcp_keepalive_manager.go  tenant.go
pkg/server/application_api/: sql_stats_test.go
pkg/server/debug/: BUILD.bazel  debug_test.go
pkg/server/license/: enforcer.go  vcpu_audit.go  vcpu_audit_test.go
pkg/server/serverpb/: status.proto
pkg/sql/: BUILD.bazel  alter_function.go  alter_type.go  backfill.go  conn_executor.go  conn_executor_exec.go  crdb_internal.go  create_table.go  distinct.go  distsql_physical_planner.go  distsql_running_test.go  drop_provisioned_roles.go  index_backfiller.go  indexbackfiller_test.go  internal.go  multitenant_admin_function_test.go  opaque.go  pg_catalog.go  plan_names.go  sql_cursor.go
pkg/sql/advisorylock/: manager.go
pkg/sql/bulkmerge/: BUILD.bazel  merge_processor.go
pkg/sql/execinfrapb/: component_stats.proto
pkg/sql/importer/: BUILD.bazel  import_job.go  import_stmt_test.go
pkg/sql/parser/: help_test.go  parse_test.go  sql.y
pkg/sql/row/: kv_batch_fetcher.go
pkg/sql/rowexec/: inverted_joiner.go  joinreader.go  tablereader.go  vector_search.go  zigzagjoiner.go
pkg/sql/scheduledlogging/: BUILD.bazel
pkg/sql/schemachanger/: sctest_generated_test.go
pkg/sql/sqlclustersettings/: clustersettings.go
pkg/sql/sqlstats/: sqlstats_test.go
pkg/storage/: pebble.go
pkg/testutils/lint/: lint_test.go
pkg/testutils/localtestcluster/: BUILD.bazel  local_test_cluster.go
pkg/testutils/release/: cockroach_releases.yaml
pkg/ts/: server_test.go
pkg/ui/: pnpm-lock.yaml
pkg/upgrade/upgrades/: alter_sql_instances_locality_test.go  role_id_sequence_migration.go
pkg/util/admission/: cpu_time_token_filler.go  cpu_time_token_filler_test.go  cpu_time_token_grant_coordinator.go  group_key.go  replicated_write_admission_test.go  resource_group_config_holder.go  resource_group_config_holder_test.go  sql_cpu_handle_test.go  (+2 more)
scripts/: gceworker.sh
(+147 files in other folders)
