load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "restorerevlog",
    srcs = ["restore.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/revlog/restorerevlog",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/backup/backupinfo",
        "//pkg/build",
        "//pkg/cloud",
        "//pkg/jobs/jobspb",
        "//pkg/revlog",
        "//pkg/roachpb",
        "//pkg/sql",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/tabledesc",
        "//pkg/sql/execinfrapb",
        "//pkg/util/hlc",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_errors//:errors",
    ],
)
