load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "restorerevlog",
    srcs = [
        "local_merge_processor.go",
        "restore.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/revlog/restorerevlog",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/backup/backupinfo",
        "//pkg/build",
        "//pkg/cloud",
        "//pkg/jobs",
        "//pkg/jobs/jobspb",
        "//pkg/keys",
        "//pkg/revlog",
        "//pkg/revlog/revlogpb",
        "//pkg/roachpb",
        "//pkg/sql",
        "//pkg/sql/catalog",
        "//pkg/sql/catalog/descpb",
        "//pkg/sql/catalog/tabledesc",
        "//pkg/sql/execinfra",
        "//pkg/sql/execinfrapb",
        "//pkg/sql/physicalplan",
        "//pkg/sql/rowenc",
        "//pkg/sql/sem/tree",
        "//pkg/sql/types",
        "//pkg/storage",
        "//pkg/util/hlc",
        "//pkg/util/log",
        "//pkg/util/protoutil",
        "//pkg/util/timeutil",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_cockroachdb_pebble//objstorage/objstorageprovider",
    ],
)

go_test(
    name = "restorerevlog_test",
    srcs = ["restore_test.go"],
    embed = [":restorerevlog"],
    deps = [
        "//pkg/cloud",
        "//pkg/cloud/cloudpb",
        "//pkg/cloud/nodelocal",
        "//pkg/revlog",
        "//pkg/revlog/revlogpb",
        "//pkg/roachpb",
        "//pkg/settings/cluster",
        "//pkg/sql/execinfrapb",
        "//pkg/util/hlc",
        "//pkg/util/leaktest",
        "@com_github_stretchr_testify//require",
    ],
)
